--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "dependencies": {
     "discord": "^0.8.2",
+    "discord.js": "^11.3.2",
     "request": "^2.85.0"
   },
   "scripts": {
