--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord": "^0.8.2",
     "discord.js": "^11.3.2",
+    "mongodb": "^3.0.4",
     "request": "^2.85.0"
   },
   "scripts": {
